
2008-04-20	Rupert Germann <rupi@gmx.li>
	* enhancement: grouped the constants in 3 sections: "basic" (templatefile, pid_list, singlePid, backPid, archivelink), "xml-feeds" (feed-related settings) and "advanced" (all the rest). In most cases it should be sufficient to fill out the pids in the basic section to get an output from the news plugin.
	* fix: the fe listview did show not-published versions when dontUsePidList was enabled.
	* updated function indexes

2008-04-20	Rupert Germann <rupi@gmx.li>
	* fix !IMPORTANT! requires DB update (related to bugs 3531,3907): "news records loose categories when published/swapped into WS". Solution: removed all "unsigned" attributes from the mm tables in ext_tables.sql. Now publishing of news with categories or related news works correctly in TYPO3 version >= 4.1.7

	* new feature: with the new TS parameters "amenuStart" and "amenuEnd" it's now possible to configure an AMENU content element to display news only from a certain period.
	* new feature: "displayCatMenu.catPidList" and "displayCatMenu.recursive" give users the possibility to set a pidList for the categorymenu content element. (overrides GRSP if given)
	* new feature - stolen from timtab ;-): the singleview can now display two links that point to the previous and next article (template markers: ###PREV_ARTICLE###, ###NEXT_ARTICLE###). The field which is taken to select the previous/next article is configurable: plugin.tt_news.displaySingle.nextPrevRecSortingField (default: datetime)
	* new feature: the catmenu can now be configured to add/not add the archive parameters to its links. plugin.tt_news.catmenuWithArchiveParams (default = 1)
	* improved tree display in BE:
		- if useStoragePid is enabled each tree shows the GRSP folder and its id as rootIcon
		- in be_users/groups the categories are now grouped by sysfolder.